<resources>
    <string name="app_name">FabflixMobile</string>
    <string name="title">Title</string>
    <string name="star">Star</string>
    <string name="stars">stars</string>
    <string name="genres">genres</string>
    <string name="director">director</string>
    <string name="year">year</string>
    <string name="movie_title">Movie title</string>
    <string name="fablix">Fablix</string>
    <color name="red">#CC0000</color>
</resources>
