<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >


    <TextView
        android:id="@+id/txFab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/fablix"
        android:textColor="#00BCD4"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txstitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:layout_margin="8dp"
        android:text="@string/movie_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txsYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/year"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txsdirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/director"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txsgenres"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/genres"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txsstars"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/stars"
        android:textSize="24sp"
        android:textStyle="bold" />






</android.support.v7.widget.LinearLayoutCompat>